--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -42,7 +42,7 @@ test:
     - pyqode.python
     - pyqode.python._forms
     - pyqode.python.backend
-    - pyqode.python.managers
+  #  - pyqode.python.managers
     - pyqode.python.modes
     - pyqode.python.panels
     - pyqode.python.widgets
