--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - pyflakes
     - pyqode.core
     - pyqode.qt
-    - python
+    - python >=3.6
     - setuptools
   run:
     - docutils
@@ -35,7 +35,7 @@ requirements:
     - pyflakes
     - pyqode.core
     - pyqode.qt
-    - python
+    - python >=3.6
     - setuptools
 
 test:
