--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -10,6 +10,7 @@ source:
   sha256: 17079b014562dafa608eed210f73dc39b7a6d44d4e0bdbabff7c45b8d184e074
   patches:
     - pyflakes25_fix.patch
+    - version_setup.py.patch
 
 build:
   number: 1
